[package]
name = "dnpf"
version = "0.1.0"
authors = ["Rafael Ortiz <rortiz12@jhu.edu>"]
edition = "2018"
description = "A DNS based passive covert channel."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya = "0.10.2"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
lazy_static = "1.4.0"
bytes = "1.0.1"
mio = { version = "0.7.11", features=["os-poll", "os-ext"] }
clap = "2.33.3"
pnet = "0.28.0"
